/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-04-09 21:35 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * include/hbapi.h
  * source/common/hbgete.c
  * source/rtl/gete.c
    + new function (only MS-Windows builds):
      SETENV(<cEnvironmentVariable>,[<cNewValue>][,<lSystem>]) -> lSuccess
      Show <lSystem> == .T. when you need modify system environment variable.
      This allows other applications to pick up your updates.

2013-03-21 10:25 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/rtl/tclass.prg
    ! assigned but not used variable logic is not suitable for 
      DivertConstructorCall( ... ). Restored and added #pragma -w2

2013-03-28 16:50 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/rtl/tclass.prg
    ! fixed a bug introduced in my last commit

2013-03-25 09:05 UTC-200 Luiz Rafael Culik <luiz/AT/xharbour/com/br>  
  * source/rtl/memoedit.prg
    ! now handling ME_PASTE return by calling  hb_gtinfo( HB_GTI_CLIPBOARDPAST )    

2013-03-25 18:44 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * winmake/common3.mak
  * winmake/makefile.gc
    ! set harbour warning to the highest level, -w3

  * utils/hbmake/hbmake.prg
  * utils/xbscript/xbscript.prg
    ! fixed assigned but not used variable, hidden with #pragma w2

  * source/rtl/tclass.prg
  * source/rtl/treport.prg
  * source/rdd/usrrdd/rdds/adordd.prg
  * contrib/misc/nconvert.prg
  * contrib/misc/fileread.prg
  * contrib/pdflite/pdf1.prg
  * utils/hbdoc/hbdoc.prg
  * utils/hbdoc/genasc.prg
  * utils/hbdoc/genhpc.prg
  * utils/hbdoc/genhtm.prg
  * utils/hbdoc/genchm.prg
  * utils/hbdoc/genng.prg
  * utils/hbdoc/genos2.prg
  * utils/hbdoc/genrtf.prg
  * utils/hbdoc/gentrf.prg
  * utils/hbdoc/html.prg
  * utils/hbdoc/os2.prg
  * utils/hbdoc/rtf.prg
  * utils/hbdoc/ffile1.prg